--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       </div>
     </header>
     <main>
-      <!----------HERO------------------------------------------------>
+      <!----------HERO------------------------------------------------
 
       <section class="hero section overlay">
         <div class="container">
@@ -71,7 +71,7 @@
         </div>
       </section>
 
-      <!-----------SOLUTIONS------------------------------------------------->
+      <!-----------SOLUTIONS-------------------------------------------------
       <section class="solutions section">
         <div class="container">
           <h2 class="section-title visually-hidden">solution</h2>
@@ -130,7 +130,7 @@
           </ul>
         </div>
       </section>
-      <!------------SERVICES------------------------------------------->
+      <!------------SERVICES-------------------------------------------
       <section class="services section">
         <div class="container">
           <h2 class="services-title centered">What are we doing</h2>
@@ -163,12 +163,12 @@
         </div>
       </section>
 
-      <!--------------TEAM------------------------------------------->
+      <!--------------TEAM-------------------------------------------
       <section class="team section">
         <div class="container">
           <h2 class="team-title centered section-title">Our Team</h2>
           <ul class="team-list">
-            <!--карточка Mark Guerrero-->
+            <!--карточка Mark Guerrero--
             <li class="team-item">
               <img
                 class="team-img"
@@ -181,7 +181,7 @@
                 <h3 class="team-subtitle centered">Mark Guerrero</h3>
                 <p class="team-text centered">Product Designer</p>
 
-                <!--иконки с соцсетями для Mark Guerrero-->
+                <!--иконки с соцсетями для Mark Guerrero--
                 <ul class="team-list-icon">
                   <li class="team-item-icon">
                     <a class="team-link-icon" href="#">
@@ -218,7 +218,7 @@
               </div>
             </li>
 
-            <!--карточка Tom Ford-->
+            <!--карточка Tom Ford--
             <li class="team-item">
               <img
                 class="team-img"
@@ -230,7 +230,7 @@
               <div class="team-set">
                 <h3 class="team-subtitle centered">Tom Ford</h3>
                 <p class="team-text centered">Frontend Developer</p>
-                <!--иконки с цоцсетями Tom Ford-->
+                <!--иконки с цоцсетями Tom Ford--
                 <ul class="team-list-icon">
                   <li class="team-item-icon">
                     <a class="team-link-icon" href="">
@@ -265,7 +265,7 @@
               </div>
             </li>
 
-            <!--карточка Camila Garcia-->
+            <!--карточка Camila Garcia--
             <li class="team-item">
               <img
                 class="team-img"
@@ -313,7 +313,7 @@
               </div>
             </li>
 
-            <!--карточка Daniel Wilson-->
+            <!--карточка Daniel Wilson--
             <li class="team-item">
               <img
                 class="team-img"
@@ -363,9 +363,9 @@
           </ul>
         </div>
       </section>
-      <!------------/TEAM------------------------------------------------------------------------>
+      <!------------/TEAM------------------------------------------------------------------------
 
-      <!----Customes(клиенты)------------------------------------------------------------>
+      <!----Customes(клиенты)------------------------------------------------------------
       <section class="customes">
         <div class="container">
           <h2 class="customes-titel">Customers</h2>
@@ -417,10 +417,10 @@
       </section>
     </main>
 
-    <!--------------FOOTER------------------------------------------------>
+    <!--------------FOOTER------------------------------------------------
     <footer class="footer">
       <div class="container footer-container">
-        <!--обвертка div для a-ccылка и p-текст-->
+        <!--обвертка div для a-ccылка и p-текст--
         <div class="footer-wrapper-content">
           <a class="logo-footer link" href="./index.html"
             ><span class="piece">WEB</span>STUDIO</a
@@ -431,7 +431,7 @@
           </p>
         </div>
 
-        <!--обвертка для h3 и списка ссылок в соцсети-->
+        <!--обвертка для h3 и списка ссылок в соцсети--
         <div class="footer-wrapper-link">
           <h3 class="footer-titel">Social media</h3>
           <div class="footer-list-link">
@@ -468,7 +468,7 @@
           </div>
         </div>
 
-        <!---------обвертка div для form-footer------------------------------------->
+        <!---------обвертка div для form-footer-------------------------------------
         <div class="footer-wrapper-form">
           <p class="footer-form-text">Subscribe</p>
           <form class="footer-form">
@@ -489,7 +489,7 @@
       </div>
     </footer>
 
-    <!----------МОДАЛЬНОЕ ОКНО ИЗ HERO------------------>
+    <!----------МОДАЛЬНОЕ ОКНО ИЗ HERO------------------
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button type="submit" class="hero-svg" data-modal-close>
