--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             </buttom>
           </div>
 
-          <!--список ссылок на страницы(Studio,Portfolio,Contacts) сайта--
+          <!--список ссылок на страницы(Studio,Portfolio,Contacts) сайта-->
           <div class="mobile-menu-set">
             <ul class="mobile-menu-items">
               <li class="mobile-menu-item">
@@ -111,9 +111,9 @@
             </ul>
           </div>
 
-           <!--обвертка в которой сидят ссылки на соцсети--
+           <!--обвертка в которой сидят ссылки на соцсети-->
           <div>
-            <!--список(ul) ссылок соцсетей в mobile-menu--
+            <!--список(ul) ссылок соцсетей в mobile-menu-->
             <ul class="mobile-menu-list-icon">
               <li class="mobile-menu-item-icon">
                 <a class="mobile-menu-link-icon" href="#">
