--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
               </li>
             </ul>
           </nav>
-          <address class="adress">
+          <address class="contact">
             <ul class="header-contact list">
               <li class="header-contact-item">
                 <a
@@ -67,12 +67,7 @@
         </div>
       </div>
 
-
-  
-
-
-
-       <!--мобильное меню(контейнер в котором сидит все)-->
+       <!--МОБИЛЬНОЕ МЕНЮ КОНТЕЙНЕТ В КОТОРОМ СИДИТ ВСЕ-->
       <div class="js-menu-container">
         <div class="container mobile-menu-container">
           <div class="mobile-menu-crose-btn">
@@ -152,7 +147,7 @@
     </header>
     <main>
 
-      <!----------HERO------------------------------------------------
+      <!----------HERO------------------------------------------------>
       <section class="hero section overlay">
         <div class="container">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
@@ -579,8 +574,7 @@
         </div>
       </div>
     </footer>
-
-    <!----------МОДАЛЬНОЕ ОКНО ИЗ HERO------------------
+         
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button type="submit" class="hero-svg" data-modal-close>
