--- a/index.html
+++ b/index.html
@@ -667,8 +667,8 @@
           </div>
         </form>
       </div>
-    </div>
-    <script src="./js/modal.js"></script>---------------------------->
+    </div>-------------------------->
+    <script src="./js/modal.js"></script>
     <script src="./js/mobile-menu.js"></script>
   </body>
 </html>
