--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
         </div>
       </section>
 
-      <!-----------SOLUTIONS-------------------------------------------------
+      <!-----------SOLUTIONS------------------------------------------------->
       <section class="solutions section">
         <div class="container">
           <h2 class="section-title visually-hidden">solution</h2>
@@ -216,7 +216,7 @@
           </ul>
         </div>
       </section>
-      <!------------SERVICES-------------------------------------------
+      <!------------SERVICES------------------------------------------->
       <section class="services section">
         <div class="container">
           <h2 class="services-title centered">What are we doing</h2>
@@ -249,15 +249,16 @@
         </div>
       </section>
 
-      <!--------------TEAM-------------------------------------------
+      <!--------------TEAM------------------------------------------->
       <section class="team section">
         <div class="container">
           <h2 class="team-title centered section-title">Our Team</h2>
           <ul class="team-list">
-            <!--карточка Mark Guerrero--
+            <!--карточка Mark Guerrero-->
             <li class="team-item">
               <img
                 class="team-img"
+                srcset="./images/img1-@2x.jpg 2x"
                 src="./images/markguerrero.jpg"
                 alt="a man with beard"
                 width="264"
@@ -267,7 +268,7 @@
                 <h3 class="team-subtitle centered">Mark Guerrero</h3>
                 <p class="team-text centered">Product Designer</p>
 
-                <!--иконки с соцсетями для Mark Guerrero--
+                <!--иконки с соцсетями для Mark Guerrero-->
                 <ul class="team-list-icon">
                   <li class="team-item-icon">
                     <a class="team-link-icon" href="#">
@@ -304,10 +305,11 @@
               </div>
             </li>
 
-            <!--карточка Tom Ford--
+            <!--карточка Tom Ford-->
             <li class="team-item">
               <img
                 class="team-img"
+                srcset="./images/img2-@2x.jpg 2x"
                 src="./images/tomford.jpg"
                 alt="smiling man"
                 width="264"
@@ -316,7 +318,7 @@
               <div class="team-set">
                 <h3 class="team-subtitle centered">Tom Ford</h3>
                 <p class="team-text centered">Frontend Developer</p>
-                <!--иконки с цоцсетями Tom Ford--
+                <!--иконки с цоцсетями Tom Ford-->
                 <ul class="team-list-icon">
                   <li class="team-item-icon">
                     <a class="team-link-icon" href="">
@@ -351,10 +353,11 @@
               </div>
             </li>
 
-            <!--карточка Camila Garcia--
+            <!--карточка Camila Garcia-->
             <li class="team-item">
               <img
                 class="team-img"
+                srcset="./images/img3-@2x.jpg 2x"
                 src="./images/camilagarsia.jpg"
                 alt="a woman in pink sweater"
                 width="264"
@@ -399,10 +402,11 @@
               </div>
             </li>
 
-            <!--карточка Daniel Wilson--
+            <!--карточка Daniel Wilson-->
             <li class="team-item">
               <img
                 class="team-img"
+                srcset="./images/img4-@2x.jpg 2x"
                 src="./images/danielwilson.jpg"
                 alt="smiling man with beard"
                 width="264"
@@ -573,8 +577,9 @@
           </form>
         </div>
       </div>
-    </footer>
-         
+    </footer>------------------------->
+     
+       <!--------Модальное окно-->
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button type="submit" class="hero-svg" data-modal-close>
@@ -667,7 +672,7 @@
           </div>
         </form>
       </div>
-    </div>-------------------------->
+    </div>
     <script src="./js/modal.js"></script>
     <script src="./js/mobile-menu.js"></script>
   </body>
