--- a/index.html
+++ b/index.html
@@ -22,25 +22,31 @@
   </head>
 
   <body>
-    <!--------------HEADER---------------------------------------------------------->
-    <div class="header">
-      <div class="container header-container">
-        <a class="logo-header link" href="./index.html">
-          <span class="piece">WEB</span>STUDIO</a>
+    <!--HEDER---------------------------------------------------->
+    <header>
+      <div class="header">
+        <div class="container header-container">
+          <a class="logo-header link" href="./index.html">
+            <span class="piece">WEB</span>STUDIO
+          </a>
           <!--кнопка-гамбургер(открытие мобильного меню)и крестик(закрытие моб меню)-->
           <button type="button" class="js-open-menu">
             <svg class="mobile-menu-btn-icon" width="32" height="22">
               <use href="./images/sprite.svg#icon-hamburger"></use>
-            </svg>  
+            </svg>
           </button>
           <div class="menu-container">
             <nav class="header-navigation">
               <ul class="header-list list">
                 <li class="header-item">
-                  <a class="header-link current link" href="./index.html">Studio</a>
+                  <a class="header-link current link" href="./index.html"
+                    >Studio</a
+                  >
                 </li>
                 <li class="header-item">
-                  <a class="header-link link" href="./portfolio.html">Portfolio</a>
+                  <a class="header-link link" href="./portfolio.html"
+                    >Portfolio</a
+                  >
                 </li>
                 <li class="header-item">
                   <a class="header-link link" href="">Contacts</a>
@@ -52,38 +58,41 @@
                 <li class="header-contact-item">
                   <a
                     class="header-contact-link link"
-                    href="mailto:info@devstudio.com">info@devstudio.com
+                    href="mailto:info@devstudio.com"
+                    >info@devstudio.com
                   </a>
                 </li>
                 <li class="header-contact-item">
-                  <a class="header-contact-link link" href="tel:+110001111111">+11 (000) 111-11-11
+                  <a class="header-contact-link link" href="tel:+110001111111"
+                    >+11 (000) 111-11-11
                   </a>
                 </li>
               </ul>
             </address>
           </div>
         </div>
-
         <!--МОБИЛЬНОЕ МЕНЮ КОНТЕЙНЕТ В КОТОРОМ СИДИТ ВСЕ-->
         <div class="js-menu-container">
           <div class="container mobile-menu-container">
             <div class="mobile-menu-crose-btn">
               <buttom class="js-close-menu">
                 <svg class="mobile-menu-close-icon" width="8" height="8">
-                  <use href="./images/sprite.svg#icon-close">
-                  </use>
+                  <use href="./images/sprite.svg#icon-close"></use>
                 </svg>
               </buttom>
             </div>
-
             <!--список ссылок на страницы(Studio,Portfolio,Contacts) сайта-->
             <div class="mobile-menu-set">
               <ul class="mobile-menu-items">
                 <li class="mobile-menu-item">
-                  <a class="mobile-menu-link link" href="./index.html">Studio</a>
+                  <a class="mobile-menu-link link" href="./index.html"
+                    >Studio
+                  </a>
                 </li>
                 <li class="mobile-menu-item">
-                  <a class="mobile-menu-link link" href="./portfolio.html">Portfolio</a>
+                  <a class="mobile-menu-link link" href="./portfolio.html"
+                    >Portfolio</a
+                  >
                 </li>
                 <li class="mobile-menu-item">
                   <a class="mobile-menu-link link" href=" ">Contacts</a>
@@ -94,18 +103,26 @@
             <div class="mobile-menu-contact">
               <ul class="mobile-menu-contact-list">
                 <li class="mobile-menu-contact-tel">
-                  <a class="mobile-menu-contact-tel-link link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+                  <a
+                    class="mobile-menu-contact-tel-link link"
+                    href="tel:+110001111111"
+                    >+11 (000) 111-11-11</a
+                  >
                 </li>
 
                 <li>
-                  <a class="mobile-menu-contact-mailto-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                  <a
+                    class="mobile-menu-contact-mailto-link link"
+                    href="mailto:info@devstudio.com"
+                    >info@devstudio.com</a
+                  >
                 </li>
               </ul>
             </div>
 
             <!--обвертка в которой сидят ссылки на соцсети-->
             <div>
-            <!--список(ul) ссылок соцсетей в mobile-menu-->
+              <!--список(ul) ссылок соцсетей в mobile-menu-->
               <ul class="mobile-menu-list-icon">
                 <li class="mobile-menu-item-icon">
                   <a class="mobile-menu-link-icon" href="#">
@@ -122,7 +139,7 @@
                     </svg>
                   </a>
                 </li>
-              
+
                 <li class="mobile-menu-item-icon">
                   <a class="mobile-menu-link-icon" href="#">
                     <svg class="mobile-menu-icon" width="16" height="16">
@@ -144,10 +161,8 @@
         </div>
       </div>
     </header>
-
     <main>
-
-      <!----------HERO------------------------------------------------>
+      <!---------------------------------------HERO------------------------------------------------>
       <section class="hero section overlay">
         <div class="container">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
@@ -578,8 +593,8 @@
         </div>
       </div>
     </footer>
-     
-       <!--------Модальное окно-->
+
+    <!--------Модальное окно-->
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button type="submit" class="hero-svg" data-modal-close>
